--- a/Prem Shah_Resume.tex
+++ b/Prem Shah_Resume.tex
@@ -154,6 +154,14 @@
 %-----------PROJECTS-----------------
 \section{Projects}
   \resumeSubHeadingListStart
+  \resumeSubheadingThree
+{Social Statistics: Studying opinions to understand migration}{\textit{Dec 2017 -- Current}}
+\resumeItemListStart
+\resumeItemTwo{Working as an independent researcher under Prof. Emilio Zagheni to understand migrant demography using LinkedIn \& Twitter data.}
+\resumeItemTwo{Analyzing tweets from potential migrants to detect change in opinions and timing of migration}
+\resumeItemTwo{Understanding how migration affects socio-psychological factors like happiness} 
+\resumeItemListEnd
+
     \resumeSubheadingThree
 {Quantitative Research: Factors affecting the ethical usage of assistive technology for dementia}{\textit{Sep 2017 -- Dec 2017}}
 \resumeItemListStart
