--- a/Prem Shah_Resume.tex
+++ b/Prem Shah_Resume.tex
@@ -114,7 +114,7 @@
   \resumeSubHeadingListStart
     \resumeSubheadingTwo
       {University of Washington, Information School}{Seattle, WA}
-      {Master of Science in Information Management (Specialization in Data Science);  GPA: 3.8}{Sep. 2017 -- Jun. 2019}{Relevant Coursework: Theoretical Foundations of Data Science, Visualization Design, Analytical Methods for Research}
+      {Master of Science in Information Management (Specialization in Data Science);  GPA: 3.8}{Sep. 2017 -- Jun. 2019}{Relevant Coursework: Theoretical Foundations of Data Science, Visualization Design, Analytical Methods for Research.}
       
     \resumeSubheadingTwo
       {Ahmedabad University, School of Engineering \& Applied Science}{ Ahmedabad, India}
@@ -139,7 +139,7 @@
   \resumeSubHeadingListStart
 
     \resumeSubheadingTwo
-      {Exponentia Datalabs}{Mumbai, India}{Intern, Text Analytics}{Jan 2017 -- Apr 2017}{\textit{Exponentia Datalabs is a growing analytics company specializing in end-to-end solutions for customer support analytics.}} \vspace{-2pt}
+      {Exponentia Datalabs}{Mumbai, India}{Intern, Data Analytics}{Jan 2017 -- Apr 2017}{\textit{Exponentia Datalabs is a growing analytics company specializing in end-to-end solutions for customer support analytics.}} \vspace{-2pt}
       \resumeItemListStart
 		\resumeItemTwo{Migrated the sentiment analysis component of the company’s product from Support Vector Machines to Recurrent Neural Networks. Improved the accuracy of the model from 78\% to 86\%.}
 		\resumeItemTwo{Researched and developed a phrase chunking component to extract noun, adjectives and verb phrases. Further improved the accuracy and precision by approximately 2\%. Integral component to extract multiple sentiments.} 
@@ -158,8 +158,8 @@
 {Social Statistics: Studying opinions to understand migration}{\textit{Dec 2017 -- Current}}
 \resumeItemListStart
 \resumeItemTwo{Working as an independent researcher under Prof. Emilio Zagheni to understand migrant demography using LinkedIn \& Twitter data.}
-\resumeItemTwo{Analyzing tweets from potential migrants to detect change in opinions and timing of migration}
-\resumeItemTwo{Understanding how migration affects socio-psychological factors like happiness} 
+\resumeItemTwo{Analyzing tweets from potential migrants to detect change in opinions and timing of migration.}
+\resumeItemTwo{Understanding how migration affects socio-psychological factors like happiness.} 
 \resumeItemListEnd
 
     \resumeSubheadingThree
@@ -182,9 +182,10 @@
 {Database Management: Medical Search Engine}{\textit{Aug 2015 - Dec 2015}}
 \resumeItemListStart
 \resumeItemTwo{Integrated and developed user search for nearby medical facilities and information using MySQL. Included functionality to search for nearest hospitals and drugstores based on user’s current geographical location. }
-\resumeItemTwo{Utilized user’s past search data and current geographical location to give results through querying and transaction processing. Also gave recommendations based on past searches} 
+\resumeItemTwo{Utilized user’s past search data and current geographical location to give results through querying and transaction processing. Also gave recommendations based on past searches.} 
 \resumeItemTwo{Created wireframes for user interaction using Pencil. Awarded the Best Project in class.}
 \resumeItemListEnd
+
 
 \resumeSubHeadingListEnd
 
